--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   flame: ^1.30.1
   flame_audio: ^2.11.9
   flutter_launcher_icons: ^0.14.4
+  simple_animations: ^5.2.0
 
 dev_dependencies:
   flutter_test:
