--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: juanshooter
-description: "shooter game"
+name: juanhooter_camera
+description: "experimental version of juanshooter game"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -73,7 +73,7 @@ flutter:
 flutter_icons:
   android: true
   ios: true
-  image_path: assets/images/spaceship.png
+  image_path: assets/images/ship30x24.png
 
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
